muskel/build/log/idf_py_stderr_output_73998
In file included from /Users/asuna/fun/emgband/muskel/main/muskel.c:7:
/Users/asuna/esp/esp-idf/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
/Users/asuna/fun/emgband/muskel/main/muskel.c:48:6: error: expected '=', ',', ';', 'asm' or '__attribute__' before '.' token
   48 | slave.peer_addr = [];
      |      ^
/Users/asuna/fun/emgband/muskel/main/muskel.c: In function 'sendNow':
/Users/asuna/fun/emgband/muskel/main/muskel.c:132:5: error: unknown type name 'wifi_init_config_t'; did you mean 'wifi_ant_config_t'?
  132 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |     ^~~~~~~~~~~~~~~~~~
      |     wifi_ant_config_t
/Users/asuna/fun/emgband/muskel/main/muskel.c:132:30: error: implicit declaration of function 'WIFI_INIT_CONFIG_DEFAULT' [-Werror=implicit-function-declaration]
  132 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /Users/asuna/esp/esp-idf/components/esp_wifi/include/esp_now.h:11,
                 from /Users/asuna/fun/emgband/muskel/main/muskel.c:4:
/Users/asuna/fun/emgband/muskel/main/muskel.c:133:21: error: implicit declaration of function 'esp_wifi_init'; did you mean 'esp_timer_init'? [-Werror=implicit-function-declaration]
  133 |     ESP_ERROR_CHECK(esp_wifi_init(&cfg));
      |                     ^~~~~~~~~~~~~
/Users/asuna/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/Users/asuna/fun/emgband/muskel/main/muskel.c:135:21: error: implicit declaration of function 'esp_wifi_set_mode' [-Werror=implicit-function-declaration]
  135 |     ESP_ERROR_CHECK(esp_wifi_set_mode(WIFI_MODE_STA));
      |                     ^~~~~~~~~~~~~~~~~
/Users/asuna/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/Users/asuna/fun/emgband/muskel/main/muskel.c:136:21: error: implicit declaration of function 'esp_wifi_start' [-Werror=implicit-function-declaration]
  136 |     ESP_ERROR_CHECK(esp_wifi_start());
      |                     ^~~~~~~~~~~~~~
/Users/asuna/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/Users/asuna/fun/emgband/muskel/main/muskel.c:150:21: error: implicit declaration of function 'esp_wifi_get_mac' [-Werror=implicit-function-declaration]
  150 |     ESP_ERROR_CHECK(esp_wifi_get_mac(ESP_IF_WIFI_STA, mac_transmitter));
      |                     ^~~~~~~~~~~~~~~~
/Users/asuna/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/Users/asuna/fun/emgband/muskel/main/muskel.c:159:39: warning: passing argument 2 of 'esp_now_send' from incompatible pointer type [-Wincompatible-pointer-types]
  159 |         esp_now_send(slave.peer_addr, &samples, sizeof(samples));
      |                                       ^~~~~~~~
      |                                       |
      |                                       complex_t (*)[256]
/Users/asuna/esp/esp-idf/components/esp_wifi/include/esp_now.h:209:65: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'complex_t (*)[256]'
  209 | esp_err_t esp_now_send(const uint8_t *peer_addr, const uint8_t *data, size_t len);
      |                                                  ~~~~~~~~~~~~~~~^~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/muskel.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
